syntax = "proto3";

package pagination;

import "buf/validate/validate.proto";

message PagePaginationRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 0];
  int32 page_size = 2 [(buf.validate.field).int32 = {
    gte: 0
    lte: 100
  }];
}

message CursorPaginationRequest {
  string cursor = 1;
  int32 limit = 2 [(buf.validate.field).int32 = {
    gte: 0
    lte: 100
  }];
}

message PaginationRequest {
  oneof mode {
    PagePaginationRequest page = 1;
    CursorPaginationRequest cursor = 2;
  }
}

message PagePaginationResponse {
  int64 total = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message CursorPaginationResponse {
  string next_cursor = 1;
  bool has_more = 2;
}

message PaginationResponse {
  oneof mode {
    PagePaginationResponse page = 1;
    CursorPaginationResponse cursor = 2;
  }
}
